# rust-api-blueprint

./: Cargo.toml  LICENSE  README.md  index.md
src/: main.rs
